--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,3 +1,4 @@
 <p class="site-intro">
-    Hello, I'm Anthony Liriano - a Software Developer in the New England Area
+    Hello, I'm Anthony Liriano, nice too met you!
+    I design anddevelop software. <a href="#">Follow Me</a> or <a href="mailto:anthonylir@gmail.com">email me</a> 
 </p>
