--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,4 +1,4 @@
 <p class="site-intro">
     Hello, I'm Anthony Liriano, nice too met you! <br />
-    I design and develop software. <a href="#">Follow me</a> or <a href="mailto:anthonylir@gmail.com">email me</a> 
+    I design and develop software. <a href="https://twitter.com/iamliriano">Follow me</a> or <a href="mailto:anthonylir@gmail.com">email me</a> 
 </p>
