--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,5 @@
 <p class="site-intro">
     I'm Anthony Liriano! <br />
-    I enjoy writing code, blogging, eating and designing software.<br />
-    You can <a href="mailto:anthonylir@gmail.com">hire me</a> 
+    I write, tweet, design, and share code. <br />
+    <!-- You can <a href="mailto:anthonylir@gmail.com">hire me</a>  -->
 </p>
