--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
 <p class="site-nav">
-    <a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">About</a> / 
-    <a href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}">RSS</a>
+    <a href="{{ '/projects' | prepend: site.baseurl | prepend: site.url }}">Projects</a> / 
+    <a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">About</a> 
 </p>
