--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,5 @@
 <p class="site-intro">
     Hi, I'm Anthony Liriano! <br />
-    I write, tweet, design, and share code. ** This blog, its content and opinions are my own. ** <br />
+    I write, tweet, design, and share code. <b> This blog, its content and opinions are my own. </b> <br />
     <!-- You can <a href="mailto:anthonylir@gmail.com">hire me</a>  -->
 </p>
