--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,5 @@
 <p class="site-intro">
-    Hi, I'm Anthony Liriano! <br />
+    Hi, I'm Anthony Liriano! This is my platform for experimentation. With each post, I will try to delve deeper into the ever-expanding universe of software development <br />
     I write, tweet, design, and share code. <strong> This blog, its content and opinions are my own. </strong> <br />
     <!-- You can <a href="mailto:anthonylir@gmail.com">hire me</a>  -->
 </p>
