--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -72,7 +72,7 @@
     padding: $spacing-unit ($spacing-unit * 0.75);
     margin: 1rem;
     box-sizing: border-box;
-    max-width: $max-width;
+    // max-width: $max-width;
 }
 /**
  * Pages
