--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,7 +6,7 @@
     background-size: 0 100%;
     background-repeat: no-repeat;
     transition: background .5s;
-    &:hover, {
+    &:hover {
         background-size: 100% 100%;
     }
     &--thin {
@@ -90,7 +90,7 @@
     margin-left: -2rem;
 
     a {
-        color: $text-color;
+        // color: $text-color;
         text-decoration: none;
         font-weight: normal;
 
