--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -90,7 +90,7 @@
     margin-left: -2rem;
 
     a {
-        // color: $text-color;
+        color: #0645ad;
         text-decoration: none;
         font-weight: normal;
 
