--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
 <p class="site-nav">
-    <a href="{{ '/projects' | prepend: site.baseurl | prepend: site.url }}">Projects</a>
-    <a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">About</a> 
+    <a href="{{ '/projects' | prepend: site.baseurl | prepend: site.url }}">PROJECTS</a>
+    <a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">ABOUT</a> 
 </p>
