--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <div class="page-content">
       {{ content }}
       <div class="copyright">
-        <p>&copy; {{ site.time | date: '%Y' }} <a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}"><strong>{{ site.title }}</strong></a> ― Powered by <a href="https://jekyllrb.com/">Jekyll</a> and the TextLog Theme</p>
+        <p>&copy; {{ site.time | date: '%Y' }} <a href="https://AnthonyLiriano.com"><strong>anthonyliriano.com</strong></a> ― Powered by <a href="https://jekyllrb.com/">Jekyll</a> and the TextLog Theme</p>
       </div>
     </div>
     {% include google_analytics.html %}
