--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<a href="/"> << BACK</a>
 <article class="post">
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
