--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,5 @@
 <p class="site-nav">
-    <a href="{{ '/projects' | prepend: site.baseurl | prepend: site.url }}">PROJECTS</a>
+    <!-- <a href="{{ '/projects' | prepend: site.baseurl | prepend: site.url }}">PROJECTS</a> -->
     <a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">ABOUT</a> 
+    <a href="{{ '/contact' | prepend: site.baseurl | prepend: site.url }}">CONTACT</a> 
 </p>
