--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,6 @@
 <p class="site-nav">
-    <!-- <a href="{{ '/projects' | prepend: site.baseurl | prepend: site.url }}">PROJECTS</a> -->
+    <a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">HOME</a> 
     <a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">ABOUT</a> 
+    <a class="disabled" href="{{ '/projects' | prepend: site.baseurl | prepend: site.url }}"  disabled>PROJECTS</a>
     <a href="{{ '/contact' | prepend: site.baseurl | prepend: site.url }}">CONTACT</a> 
 </p>
