--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <div class="page-content">
       {{ content }}
       <div class="copyright">
-        <p>&copy; {{ site.time | date: '%Y' }} <a href="https://AnthonyLiriano.com"><strong>anthonyliriano.com</strong></a> ― Powered by the TextLog Theme</p>
+        <p>&copy; {{ site.time | date: '%Y' }} <a href="https://AnthonyLiriano.com"><strong>anthonyliriano.com</strong></a> </p>
       </div>
     </div>
     {% include google_analytics.html %}
