--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -44,7 +44,7 @@
     .site-intro {
         font-size: 1.1rem;
         font-weight: 200;
-        text-align: center;
+        text-align: left;
     }
 }
 
@@ -210,6 +210,7 @@
     margin-right: 5px;
     font-weight: 300 !important;
     text-decoration: none;
+    font-size: 1rem;
 }
 
 .tags{
