--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -132,7 +132,10 @@
     letter-spacing: -1px;
     line-height: 1.2;
     margin-bottom: 0.5rem;
-    font-weight: bold;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: black;
+    letter-spacing: .07rem;
 }
 
 .post-meta {
