--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,10 +6,11 @@ layout: default
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
     <p class="post-meta">
-      <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %d, %Y" }}</time>
+      Created: <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %d, %Y" }}</time>
       {% if page.author %} &middot; <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}
 
       {% assign post = page %}
+      {% if post.dateModified != null  %} (Last Update {{ post.dateModified }}) {% endif %}
   		{% if post.tags.size > 0 %}
 
   		{% assign tags_content = "" %}
@@ -23,6 +24,8 @@ layout: default
   		&middot;	<span class="tags" itemprop="tags">{{ tags_content }}</span>
 
   	  {% endif %}
+
+     
 
     </p>
   </header>
