--- a/css/main.scss
+++ b/css/main.scss
@@ -191,3 +191,22 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javasc
      cursor: help;
  }
  
+
+ //  Custom CSS
+ .site-nav > a{
+     font-weight: 600 !important;
+ }
+.project-desc{
+    font-size: .90rem !important;
+}
+
+.project > .card-body > .card-subtitle{
+    font-size: .85rem !important;
+}
+
+a.card-link {
+    font-size: .95rem;
+    text-decoration: none;
+
+}
+
