--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,12 @@
 ---
 layout: default
 ---
-<a class="back-link" href="/"> << RETURN HOME</a>
+<section class="site-header">
+  <h1 class="smallcap"><a class="site-title" href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">
+      Anthony Liriano
+  </a></h1>
+  {% include nav.html %}
+</section>
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
