--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,7 @@
 ---
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 // Our variables
 $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -210,3 +211,10 @@ a.card-link {
 
 }
 
+.container-fluid {
+    font-family: 'Inter', sans-serif;
+}
+
+.text-bold{
+    font-weight: 900 !important;
+}
