--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,5 +3,5 @@
     <!-- <a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">ABOUT</a>  -->
     <a class="disabled" href="{{ '/projects' | prepend: site.baseurl | prepend: site.url }}"  disabled>PROJECTS</a>
     <a href="mailto:email@anthonyliriano.com">CONTACT</a> 
-    <a href="https://calendly.com/anthonyliriano" target="_blank">SCHEDULE A MEETING</a> 
+    <!-- <a href="https://calendly.com/anthonyliriano" target="_blank">SCHEDULE A MEETING</a>  -->
 </p>
